--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-# Main packages
+# File used by Pip (if you use it)
+# to install the necessary dependencies for the project.
+
 numpy
 opencv-python
