--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,9 @@
 # File used by Conda (if you use it)
 # to install the necessary dependencies for the project.
 
-name: opencv-env
+name: opencv-examples
 
 channels:
-  - conda-forge
   - defaults
 
 dependencies:
